# web-microservice

./: .gitignore  Cargo.toml  example-request.json
.circleci/: config.yml
.github/workflows/: audit-on-push.yml  general.yml
configuration/: base.yaml  local.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs
tests/: health_check.rs
