[package]
name = "web-microservice"
version = "0.1.0"
edition = "2021"
authors = ["JD Singh <info@fermatsolutions.dev>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web-microservice"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dev-dependencies]
reqwest = "0.11"
